--- a/JDFinance-setup/app/css/element.scss
+++ b/JDFinance-setup/app/css/element.scss
@@ -20,6 +20,7 @@
   background: $bgcolor;
   padding: $padding;
   margin: $margin;
+  width: 99%;
   >h4{
     height: $height;
     line-height: $height;
